glib/gmacros.h: Fix up attribute to avoid namespace collisions

https://bugzilla.gnome.org/show_bug.cgi?id=670751